--- a/OneExam/Base.lproj/Main.storyboard
+++ b/OneExam/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="167" y="133"/>
+            <point key="canvasLocation" x="-28" y="-48"/>
         </scene>
         <!--Exam View Controller-->
         <scene sceneID="UaX-Pl-RLM">
@@ -34,19 +34,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="Kef-a9-M0A">
-                                <rect key="frame" x="30" y="174" width="315" height="82"/>
+                                <rect key="frame" x="30" y="174" width="315" height="63"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="到北京站需要多少钱" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ad6-g0-pHz">
-                                        <rect key="frame" x="52.5" y="0.0" width="210" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="fo1-Yu-rgq"/>
-                                        </constraints>
+                                        <rect key="frame" x="52.5" y="0.0" width="210" height="11"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="下記の中から正しいものを選んでください。" textAlignment="center" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GoW-cn-zkJ">
-                                        <rect key="frame" x="1.5" y="32" width="312" height="50"/>
+                                        <rect key="frame" x="1.5" y="13" width="312" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="bcP-af-MxD"/>
                                         </constraints>
@@ -57,7 +54,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="qXs-rQ-XkC">
-                                <rect key="frame" x="37.5" y="636" width="300" height="31"/>
+                                <rect key="frame" x="37.5" y="667" width="300" height="0.0"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="EVa-Em-qNr"/>
                                 </constraints>
@@ -68,10 +65,10 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xRF-fF-2yS">
-                                <rect key="frame" x="30.5" y="406" width="314" height="130"/>
+                                <rect key="frame" x="30.5" y="387" width="314" height="180"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="6lP-fo-9Z9">
-                                        <rect key="frame" x="0.0" y="0.0" width="314" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="314" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="T6X-X2-TFk"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="314" id="vEe-hd-rsq"/>
@@ -84,7 +81,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="l9S-vO-fSr">
-                                        <rect key="frame" x="0.0" y="10" width="314" height="50"/>
+                                        <rect key="frame" x="0.0" y="60" width="314" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="iel-mb-8Ne"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="314" id="nq6-Wg-YVD"/>
@@ -96,7 +93,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="EdD-jl-zOF">
-                                        <rect key="frame" x="0.0" y="70" width="314" height="50"/>
+                                        <rect key="frame" x="0.0" y="120" width="314" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="314" id="G8o-m4-d5i"/>
                                             <constraint firstAttribute="height" constant="50" id="lCX-Hm-r7W"/>
@@ -108,7 +105,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="kBc-Qv-7Ph">
-                                        <rect key="frame" x="0.0" y="130" width="314" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="180" width="314" height="0.0"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="BBb-2q-p62"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="314" id="X1M-Sc-A0R"/>
@@ -418,15 +415,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z4y-W6-0nJ">
-                                <rect key="frame" x="10" y="50" width="355" height="150"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z4y-W6-0nJ">
+                                <rect key="frame" x="10" y="50" width="355" height="225"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="250" id="KU0-JX-Yfc"/>
+                                    <constraint firstAttribute="height" constant="225" id="Mmy-Zm-hg3"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DfZ-sb-4cj">
-                                <rect key="frame" x="26" y="336.5" width="323" height="21"/>
+                                <rect key="frame" x="26" y="374" width="323" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -462,20 +459,37 @@
                                     <action selector="touchedStartDownloadButton:" destination="knS-Np-z5g" eventType="touchUpInside" id="Hm6-0K-JR4"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="imb-l9-RSC">
-                                <rect key="frame" x="10" y="210" width="355" height="274"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="imb-l9-RSC">
+                                <rect key="frame" x="10" y="285" width="355" height="199"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="文章文章文章文章文章文章文章文章文章文章文章文章文章文章文章" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X7c-yT-j67">
-                                        <rect key="frame" x="10" y="10" width="335" height="111"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="取り替えできますか？" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X7c-yT-j67">
+                                        <rect key="frame" x="10" y="10" width="335" height="33.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="あなたの趣味はなんですか？" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qg8-GX-ckP">
+                                        <rect key="frame" x="10" y="53.5" width="369" height="33.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qM9-8f-NuO">
+                                        <rect key="frame" x="27.5" y="137" width="300" height="6"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="0xX-09-OBh"/>
+                                            <constraint firstAttribute="height" constant="6" id="l3r-wq-R22"/>
+                                        </constraints>
+                                    </progressView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="X7c-yT-j67" secondAttribute="trailing" constant="10" id="APJ-5f-7W4"/>
                                     <constraint firstItem="X7c-yT-j67" firstAttribute="top" secondItem="imb-l9-RSC" secondAttribute="top" constant="10" id="E3p-wB-9FO"/>
+                                    <constraint firstItem="Qg8-GX-ckP" firstAttribute="top" secondItem="X7c-yT-j67" secondAttribute="bottom" constant="10" id="F78-Oh-pJi"/>
+                                    <constraint firstItem="qM9-8f-NuO" firstAttribute="top" secondItem="Qg8-GX-ckP" secondAttribute="bottom" constant="50" id="JAH-qb-Nqe"/>
+                                    <constraint firstItem="qM9-8f-NuO" firstAttribute="centerX" secondItem="X7c-yT-j67" secondAttribute="centerX" id="T75-zE-9eV"/>
+                                    <constraint firstItem="Qg8-GX-ckP" firstAttribute="leading" secondItem="X7c-yT-j67" secondAttribute="leading" id="c1c-c9-Keh"/>
                                     <constraint firstItem="X7c-yT-j67" firstAttribute="leading" secondItem="imb-l9-RSC" secondAttribute="leading" constant="10" id="c2t-qw-cTj"/>
                                 </constraints>
                             </view>
@@ -490,7 +504,6 @@
                             <constraint firstItem="fSW-ND-fk4" firstAttribute="top" secondItem="2DB-Bd-XPS" secondAttribute="bottom" constant="10" id="aDq-RP-Bix"/>
                             <constraint firstItem="2DB-Bd-XPS" firstAttribute="top" secondItem="imb-l9-RSC" secondAttribute="bottom" constant="10" id="aPq-jR-Cd9"/>
                             <constraint firstItem="DfZ-sb-4cj" firstAttribute="leading" secondItem="VfS-k9-Tg8" secondAttribute="leadingMargin" constant="10" id="eVo-sF-uJE"/>
-                            <constraint firstItem="imb-l9-RSC" firstAttribute="centerY" secondItem="DfZ-sb-4cj" secondAttribute="centerY" id="eWO-ii-tP7"/>
                             <constraint firstAttribute="trailingMargin" secondItem="DfZ-sb-4cj" secondAttribute="trailing" constant="10" id="h9K-AV-sNV"/>
                             <constraint firstItem="9fK-AX-6fz" firstAttribute="trailing" secondItem="2DB-Bd-XPS" secondAttribute="trailing" constant="10" id="jCb-R6-sGv"/>
                             <constraint firstItem="Z4y-W6-0nJ" firstAttribute="leading" secondItem="9fK-AX-6fz" secondAttribute="leading" constant="10" id="mYK-Se-BAg"/>
@@ -503,6 +516,7 @@
                     </view>
                     <connections>
                         <outlet property="avView" destination="Z4y-W6-0nJ" id="ij9-Kh-y5d"/>
+                        <outlet property="secondLabel" destination="Qg8-GX-ckP" id="f6C-i2-KfQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eJn-Hc-n3p" userLabel="First Responder" sceneMemberID="firstResponder"/>
